--- a/Team06_classificationProject.ipynb
+++ b/Team06_classificationProject.ipynb
@@ -1974,7 +1974,7 @@
     "]\n",
     "\n",
     "for column in involvement_columns:\n",
-    "    data[column] = data[column].fillna(data[column].mode()[0])  # Use mode for categorical involvement indicators"
+    "    data[column] = data[column].fillna(data[column].mode()[0])"
    ]
   },
   {
